--- a/ansible-kb/redis_install.yml
+++ b/ansible-kb/redis_install.yml
@@ -20,8 +20,7 @@
       dest: "{{ zip_dest_dir }}"
       force: no
 
-  - name: go to download folder
-      command: chdir="{{ zip_dest_dir }}"
-
-  - name: Unarchive the file
-     shell: tar -xzf {{ zip_dest_dir }}/{{ zip_file }}
+  - name: unarchive
+    shell: tar xzf {{ zip_dest_dir }}/{{ zip_file }}
+    args:
+      chdir: /var/redis
