--- a/ansible-kb/redis_install.yml
+++ b/ansible-kb/redis_install.yml
@@ -23,4 +23,5 @@
   - name: unarchive
     shell: tar xzf {{ zip_dest_dir }}/{{ zip_file }}
     args:
-      chdir: /var/redis
+      #chdir: /var/redis
+      chdir: "{{ zip_dest_dir }}"
