--- a/cassandra-kb/vagrant-cas-centos-model/Vagrantfile
+++ b/cassandra-kb/vagrant-cas-centos-model/Vagrantfile
@@ -1,43 +1,18 @@
-# Multi-node Cassandra cluster 
-#
-# NOT CONFIGURED WITH SEEDS AND OTHER THINGS
-#
-#     JUST PROVISIONS TWO NODES WITH DIFFERENT IP ADDRESSES
-#
-#     SEEDS MUST BE EDITED MANUALLY
-#
- 
 Vagrant.configure("2") do |config|
-
-  #config.vm.box = "centos/7"
-  #config.vm.box_download_insecure = "centos/7"
-  
-  # centos/7 box with Cassandra installed - created locally
-  config.vm.box = "cassandra311-centos7-model"
 
   config.vm.provider "virtualbox" do |vm|
       vm.memory = 2560
-      #vm.name = "cassandra-centos7-model"
+      vm.name = "cassandra-centos7-model"
   end
 
+  # Initially used this box - from web, without guest additions
+  #config.vm.box = "centos/7"
+  #config.vm.box_download_insecure = "centos/7"
+  
+  # Later used this box with guest additions
+  config.vm.box  = "centos-7-web-added-guest-add"
 
-  # Cluster1 - Datacenter1 -  Node1
-
-  config.vm.define "casc1d1n1" do |node|  
-
-    node.vm.hostname = "casd1c1n1"
-    node.vm.network "private_network", ip: "193.168.3.201"
-
-  end 
-
-
-  # Cluster1 - Datacenter1 -  Node2
-
-  config.vm.define "casc1d1n2" do |node|  
-
-    node.vm.hostname = "casd1c1n2"
-    node.vm.network "private_network", ip: "193.168.3.202"
-
-  end 
+  config.vm.hostname = "cassandra-model"
+  config.vm.network "private_network", ip: "193.168.3.100"
 
 end
